--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="img/icon.png" />
+    <link rel="icon" href="./icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AviaSales App</title>
   </head>
